--- a/templates/item_add.html
+++ b/templates/item_add.html
@@ -1,9 +1,6 @@
-<!DOCTYPE html>
-<html lang="it">
-<head>
-    <title>Aggiungi Item</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% block title %}Dashboard{% endblock %}
+{% block content %}
     <h1>Aggiungi Item</h1>
     <form method="post">
         Code: <input type="text" name="code" required><br>
@@ -11,5 +8,4 @@
         <button type="submit">Aggiungi</button>
     </form>
     <a href="{{ url_for('view_item') }}">Torna indietro</a>
-</body>
-</html>
+{% endblock %}
