--- a/templates/commission.html
+++ b/templates/commission.html
@@ -1,32 +1,67 @@
-<!DOCTYPE html>
-<html lang="it">
-<head>
-    <title>Commission</title>
-</head>
-<body>
-    <h1>Lista Commission</h1>
-    <a href="{{ url_for('add_commission') }}">Aggiungi nuovo</a>
-    <ul>
+{% extends "base.html" %}
+{% block title %}Lista Commissioni{% endblock %}
+{% block content %}
+
+<h2 class="text-center my-3">Lista Commissioni</h2>
+<a href="{{ url_for('add_commission') }}" class="btn btn-primary mb-3">Aggiungi nuovo</a>
+
+<table id="commissionTable" class="table table-striped">
+    <thead>
+        <tr>
+            <th>Codice</th>
+            <th>Data</th>
+            <th>Quantità</th>
+            <th>Stato</th>
+            <th>Azioni</th>
+        </tr>
+    </thead>
+    <tbody>
         {% for row in data %}
             {% if row[4]!="Complete" %}
-            <li>{{ row[2] }} - {{ row[1] }} - {{ row[3] }} [{{ row[4] }}]
-                <a href="{{ url_for('view_commissionprogress', id=row[0]) }}">Visualizza</a>
-                <a href="{{ url_for('delete_commission', id=row[0]) }}">Elimina</a>
-            </li>
+            <tr>
+                <td>{{ row[2] }}</td>
+                <td>{{ row[1] }}</td>
+                <td>{{ row[3] }}</td>
+                <td>{{ row[4] }}</td>
+                <td>
+                    <a href="{{ url_for('view_commissionprogress', id=row[0]) }}" class="btn btn-info btn-sm">Visualizza</a>
+                    <a href="{{ url_for('delete_commission', id=row[0]) }}" class="btn btn-danger btn-sm">Elimina</a>
+                </td>
+            </tr>
             {% endif %}
         {% endfor %}
-    </ul>
+    </tbody>
+</table>
 
-    <h2>Archivio complete</h2>
-    <ul>
+<h2 class="text-center my-3">Archivio Complete</h2>
+<table id="completeCommissionTable" class="table table-striped">
+    <thead>
+        <tr>
+            <th>Codice</th>
+            <th>Data</th>
+            <th>Quantità</th>
+            <th>Stato</th>
+            <th>Azioni</th>
+        </tr>
+    </thead>
+    <tbody>
         {% for row in data %}
             {% if row[4]=="Complete" %}
-            <li>{{ row[2] }} - {{ row[1] }} - {{ row[3] }} [{{ row[4] }}]
-                <a href="{{ url_for('view_commissionprogress', id=row[0]) }}">Visualizza</a>
-                <a href="{{ url_for('delete_commission', id=row[0]) }}">Elimina</a>
-            </li>
+            <tr>
+                <td>{{ row[2] }}</td>
+                <td>{{ row[1] }}</td>
+                <td>{{ row[3] }}</td>
+                <td>{{ row[4] }}</td>
+                <td>
+                    <a href="{{ url_for('view_commissionprogress', id=row[0]) }}" class="btn btn-info btn-sm">Visualizza</a>
+                    <a href="{{ url_for('delete_commission', id=row[0]) }}" class="btn btn-danger btn-sm">Elimina</a>
+                </td>
+            </tr>
             {% endif %}
         {% endfor %}
-    </ul>
-</body>
-</html>
+    </tbody>
+</table>
+
+{% include 'datatable_setup.html' %}
+
+{% endblock %}
