--- a/templates/item.html
+++ b/templates/item.html
@@ -1,17 +1,31 @@
-<!DOCTYPE html>
-<html lang="it">
-<head>
-    <title>Item</title>
-</head>
-<body>
-    <h1>Lista Item</h1>
-    <a href="{{ url_for('add_item') }}">Aggiungi nuovo</a>
-    <ul>
+{% extends "base.html" %}
+{% block title %}Lista Item{% endblock %}
+{% block content %}
+
+<h2 class="text-center my-3">Lista Item</h2>
+<a href="{{ url_for('add_item') }}" class="btn btn-primary mb-3">Aggiungi nuovo</a>
+
+<table id="itemTable" class="table table-striped">
+    <thead>
+        <tr>
+            <th>Codice</th>
+            <th>Tipo</th>
+            <th>Azioni</th>
+        </tr>
+    </thead>
+    <tbody>
         {% for row in data %}
-            <li>{{ row[0] }} - {{ row[1] }}
-                <a href="{{ url_for('delete_item', code=row[0]) }}">Elimina</a>
-            </li>
+        <tr>
+            <td>{{ row[0] }}</td>
+            <td>{{ row[1] }}</td>
+            <td>
+                <a href="{{ url_for('delete_item', code=row[0]) }}" class="btn btn-danger btn-sm">Elimina</a>
+            </td>
+        </tr>
         {% endfor %}
-    </ul>
-</body>
-</html>
+    </tbody>
+</table>
+
+{% include 'datatable_setup.html' %}
+
+{% endblock %}
