--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Dashboard{% endblock %}
 {% block content %}
-    <h1 class="text-center">Benvenuto in LiteManagement</h1>
+    <img src="{{ url_for('static', filename = 'logo.png') }}" class="rounded mx-auto d-block" width="200">
+    <h1 class="text-center">Benvenuto in RaspERP</h1>
     <p class="text-muted text-center">Gestisci il magazzino e le commesse facilmente.</p>
-    <ul>
-        <li><a href="{{ url_for('view_bom') }}">BOM</a></li>
-        <li><a href="{{ url_for('view_commission') }}">Commission</a></li>
-        <li><a href="{{ url_for('view_item') }}">Item</a></li>
-        <li><a href="{{ url_for('view_stock') }}">Stock</a></li>
-    </ul>
 {% endblock %}
