--- a/templates/Inventory.html
+++ b/templates/Inventory.html
@@ -4,7 +4,7 @@
 
 <h2 class="text-center my-3">Lista Magazzino</h2>
 
-<table id="stockTable" class="table table-striped">
+<table id="InventoryTable" class="table table-striped">
     <thead>
         <tr>
             <th>Codice</th>
@@ -22,8 +22,8 @@
             <td>{{ row[2] }}</td>
             <td>{{ row[1]-row[2] }}</td>
             <td>
-                <a href="{{ url_for('increase_stock', itemCode=row[0]) }}" class="btn btn-success btn-sm">+</a>
-                <a href="{{ url_for('decrease_stock', itemCode=row[0]) }}" class="btn btn-danger btn-sm">-</a>
+                <a href="{{ url_for('increase_Inventory', ProductCode=row[0]) }}" class="btn btn-success btn-sm">+</a>
+                <a href="{{ url_for('decrease_Inventory', ProductCode=row[0]) }}" class="btn btn-danger btn-sm">-</a>
             </td>
         </tr>
         {% endfor %}
