--- a/templates/Inventory_codereader.html
+++ b/templates/Inventory_codereader.html
@@ -20,8 +20,8 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>{{ last_item.ItemCode }}</td>
-                        <td>{{ last_item.Quantity }}</td>
+                        <td>{{ last_item.ProductCode }}</td>
+                        <td>{{ last_item.QuantityOnHand }}</td>
                         <td>{{ last_added_count }}</td>
                     </tr>
                 </tbody>
@@ -32,8 +32,8 @@
 
     <div class="fixed-bottom bg-dark py-3">
         <form method="POST" class="container d-flex flex-column align-items-center">
-            <label for="item_code" class="text-white fs-3">Scansiona o inserisci il codice:</label>
-            <input type="text" id="item_code" name="item_code" class="form-control text-center fs-1 w-75" autofocus required>
+            <label for="ProductCode" class="text-white fs-3">Scansiona o inserisci il codice:</label>
+            <input type="text" id="ProductCode" name="ProductCode" class="form-control text-center fs-1 w-75" autofocus required>
             <button type="submit" class="btn btn-success btn-lg mt-3">Conferma</button>
         </form>
     </div>
