--- a/templates/ProductionOrder.html
+++ b/templates/ProductionOrder.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
-{% block title %}Lista Commissioni{% endblock %}
+{% block title %}Lista ProductionOrderi{% endblock %}
 {% block content %}
 
-<h2 class="text-center my-3">Lista Commissioni</h2>
-<a href="{{ url_for('add_commission') }}" class="btn btn-primary mb-3">Aggiungi nuovo</a>
+<h2 class="text-center my-3">Lista ProductionOrderi</h2>
+<a href="{{ url_for('add_ProductionOrder') }}" class="btn btn-primary mb-3">Aggiungi nuovo</a>
 
-<table id="commissionTable" class="table table-striped">
+<table id="ProductionOrderTable" class="table table-striped">
     <thead>
         <tr>
             <th>Codice</th>
@@ -24,8 +24,8 @@
                 <td>{{ row[3] }}</td>
                 <td>{{ row[4] }}</td>
                 <td>
-                    <a href="{{ url_for('view_commissionprogress', id=row[0]) }}" class="btn btn-info btn-sm">Visualizza</a>
-                    <a href="{{ url_for('delete_commission', id=row[0]) }}" class="btn btn-danger btn-sm">Elimina</a>
+                    <a href="{{ url_for('view_ProductionOrderProgress', OrderID=row[0]) }}" class="btn btn-info btn-sm">Visualizza</a>
+                    <a href="{{ url_for('delete_ProductionOrder', OrderID=row[0]) }}" class="btn btn-danger btn-sm">Elimina</a>
                 </td>
             </tr>
             {% endif %}
@@ -34,7 +34,7 @@
 </table>
 
 <h2 class="text-center my-3">Archivio Complete</h2>
-<table id="completeCommissionTable" class="table table-striped">
+<table id="completeProductionOrderTable" class="table table-striped">
     <thead>
         <tr>
             <th>Codice</th>
@@ -53,8 +53,7 @@
                 <td>{{ row[3] }}</td>
                 <td>{{ row[4] }}</td>
                 <td>
-                    <a href="{{ url_for('view_commissionprogress', id=row[0]) }}" class="btn btn-info btn-sm">Visualizza</a>
-                    <a href="{{ url_for('delete_commission', id=row[0]) }}" class="btn btn-danger btn-sm">Elimina</a>
+                    <a href="{{ url_for('view_ProductionOrderProgress', OrderID=row[0]) }}" class="btn btn-info btn-sm">Visualizza</a>
                 </td>
             </tr>
             {% endif %}
