--- a/templates/base.html
+++ b/templates/base.html
@@ -21,10 +21,10 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link" href="{{ url_for('view_bom') }}">BOM</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{{ url_for('view_commission') }}">Commission</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{{ url_for('view_item') }}">Item</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{{ url_for('view_stock') }}">Stock</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{{ url_for('view_BillOfMaterials') }}">BillOfMaterials</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{{ url_for('view_ProductionOrder') }}">ProductionOrder</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{{ url_for('view_Product') }}">Item</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{{ url_for('view_Inventory') }}">Inventory</a></li>
                     </ul>
                 </div>
             </div>
