--- a/templates/Inventory_codereader.html
+++ b/templates/Inventory_codereader.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Dashboard{% endblock %}
+{% block title %}BarcodeReader{% endblock %}
 {% block content %}
 <div class="container d-flex flex-column justify-content-center align-items-center vh-100">
     <h1 class="mb-4">Gestione Magazzino</h1>
