--- a/templates/BillOfMaterials_add.html
+++ b/templates/BillOfMaterials_add.html
@@ -1,12 +1,33 @@
 {% extends "base.html" %}
-{% block title %}Dashboard{% endblock %}
+{% block title %}Add material to bill{% endblock %}
 {% block content %}
-    <h1>Aggiungi BillOfMaterials</h1>
-    <form method="post">
-        Code: <input type="text" name="ProductCode" required><br>
-        Component Code: <input type="text" name="ChildProductCode" required><br>
-        Quantity: <input type="number" name="Quantity" required><br>
-        <button type="submit">Aggiungi</button>
-    </form>
-    <a href="{{ url_for('view_BillOfMaterials') }}">Torna indietro</a>
+    <div class="container mt-4">
+        <h1>Add Bill Of Materials</h1>
+        <form method="post" class="mt-3">
+            <div class="mb-3">
+                <label for="ProductCode" class="form-label">Product Code:</label>
+                <input type="text" id="ProductCode" name="ProductCode" list="productCodes" class="form-control" required>
+                <datalist id="productCodes">
+                    {% for row in product_codes %}
+                        <option value="{{ row[0] }}">
+                    {% endfor %}
+                </datalist>
+            </div>
+            <div class="mb-3">
+                <label for="ChildProductCode" class="form-label">Component Code:</label>
+                <input type="text" id="ChildProductCode" name="ChildProductCode" list="componentCodes" class="form-control" required>
+                <datalist id="componentCodes">
+                    {% for row in product_codes %}
+                        <option value="{{ row[0] }}">
+                    {% endfor %}
+                </datalist>
+            </div>
+            <div class="mb-3">
+                <label for="Quantity" class="form-label">Quantity:</label>
+                <input type="number" id="Quantity" name="Quantity" min="1" class="form-control" required>
+            </div>
+            <button type="submit" class="btn btn-primary">Add</button>
+            <a href="{{ url_for('view_BillOfMaterials') }}" class="btn btn-secondary">Go Back</a>
+        </form>
+    </div>
 {% endblock %}
