--- a/templates/Inventory.html
+++ b/templates/Inventory.html
@@ -1,17 +1,17 @@
 {% extends "base.html" %}
-{% block title %}Lista Magazzino{% endblock %}
+{% block title %}Inventory{% endblock %}
 {% block content %}
 
-<h2 class="text-center my-3">Lista Magazzino</h2>
+<h2 class="text-center my-3">Inventory</h2>
 
 <table id="InventoryTable" class="table table-striped">
     <thead>
         <tr>
-            <th>Codice</th>
-            <th>Totali</th>
-            <th>Bloccate</th>
-            <th>Disponibili</th>
-            <th>Azioni</th>
+            <th>ProductCode</th>
+            <th>On hand</th>
+            <th>Blocked</th>
+            <th>Available</th>
+            <th></th>
         </tr>
     </thead>
     <tbody>
