--- a/templates/Product_add.html
+++ b/templates/Product_add.html
@@ -1,11 +1,29 @@
 {% extends "base.html" %}
-{% block title %}Dashboard{% endblock %}
+{% block title %}Add product{% endblock %}
 {% block content %}
-    <h1>Aggiungi Product</h1>
-    <form method="post">
-        Code: <input type="text" name="ProductCode" required><br>
-        Category: <input type="text" name="Category" required><br>
-        <button type="submit">Aggiungi</button>
-    </form>
-    <a href="{{ url_for('view_Product') }}">Torna indietro</a>
+    <div class="container mt-4">
+        <h1>Add Product</h1>
+        <form method="post" class="mt-3">
+            <div class="mb-3">
+                <label for="ProductCode" class="form-label">Code:</label>
+                <input type="text" id="ProductCode" name="ProductCode" list="productCodes" class="form-control" required>
+                <datalist id="productCodes">
+                    {% for row in product_codes %}
+                        <option value="{{ row[0] }}">
+                    {% endfor %}
+                </datalist>
+            </div>
+            <div class="mb-3">
+                <label for="Category" class="form-label">Category:</label>
+                <select class="form-select" aria-label="Default select example" id="Category" name="Category" list="categories" class="form-control" required>
+                    <option value="Product">Product</option>
+                    <option value="Component">Component</option>
+                    <option value="PrintedPart">Printed part</option>
+                    <option value="Subassembly">Subassembly</option>
+                  </select>
+            </div>
+            <button type="submit" class="btn btn-primary">Add</button>
+            <a href="{{ url_for('view_Product') }}" class="btn btn-secondary">Go Back</a>
+        </form>
+    </div>
 {% endblock %}
