--- a/templates/ProductionOrder.html
+++ b/templates/ProductionOrder.html
@@ -1,18 +1,18 @@
 {% extends "base.html" %}
-{% block title %}Lista ProductionOrderi{% endblock %}
+{% block title %}Production Orders{% endblock %}
 {% block content %}
 
-<h2 class="text-center my-3">Lista ProductionOrderi</h2>
-<a href="{{ url_for('add_ProductionOrder') }}" class="btn btn-primary mb-3">Aggiungi nuovo</a>
+<h2 class="text-center my-3">Active Production orders</h2>
+<a href="{{ url_for('add_ProductionOrder') }}" class="btn btn-primary mb-3">Add New</a>
 
 <table id="ProductionOrderTable" class="table table-striped">
     <thead>
         <tr>
-            <th>Codice</th>
-            <th>Data</th>
-            <th>Quantità</th>
-            <th>Stato</th>
-            <th>Azioni</th>
+            <th>Product code</th>
+            <th>Date</th>
+            <th>Quantity</th>
+            <th>Status</th>
+            <th></th>
         </tr>
     </thead>
     <tbody>
@@ -24,8 +24,8 @@
                 <td>{{ row[3] }}</td>
                 <td>{{ row[4] }}</td>
                 <td>
-                    <a href="{{ url_for('view_ProductionOrderProgress', OrderID=row[0]) }}" class="btn btn-info btn-sm">Visualizza</a>
-                    <a href="{{ url_for('delete_ProductionOrder', OrderID=row[0]) }}" class="btn btn-danger btn-sm">Elimina</a>
+                    <a href="{{ url_for('view_ProductionOrderProgress', OrderID=row[0]) }}" class="btn btn-info btn-sm">View</a>
+                    <a href="{{ url_for('delete_ProductionOrder', OrderID=row[0]) }}" class="btn btn-danger btn-sm">Delete</a>
                 </td>
             </tr>
             {% endif %}
@@ -33,15 +33,15 @@
     </tbody>
 </table>
 
-<h2 class="text-center my-3">Archivio Complete</h2>
+<h2 class="text-center my-3">Archive</h2>
 <table id="completeProductionOrderTable" class="table table-striped">
     <thead>
         <tr>
-            <th>Codice</th>
-            <th>Data</th>
-            <th>Quantità</th>
-            <th>Stato</th>
-            <th>Azioni</th>
+            <th>Product code</th>
+            <th>Date</th>
+            <th>Quantity</th>
+            <th>Status</th>
+            <th></th>
         </tr>
     </thead>
     <tbody>
@@ -53,7 +53,7 @@
                 <td>{{ row[3] }}</td>
                 <td>{{ row[4] }}</td>
                 <td>
-                    <a href="{{ url_for('view_ProductionOrderProgress', OrderID=row[0]) }}" class="btn btn-info btn-sm">Visualizza</a>
+                    <a href="{{ url_for('view_ProductionOrderProgress', OrderID=row[0]) }}" class="btn btn-info btn-sm">View</a>
                 </td>
             </tr>
             {% endif %}
