--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,6 @@
 {% block title %}Dashboard{% endblock %}
 {% block content %}
     <img src="{{ url_for('static', filename = 'logo.png') }}" class="rounded mx-auto d-block" width="200">
-    <h1 class="text-center">Benvenuto in RaspERP</h1>
-    <p class="text-muted text-center">Gestisci il magazzino e le commesse facilmente.</p>
+    <h1 class="text-center">Welcome to RaspERP</h1>
+    <p class="text-muted text-center">Manage your warehouse and orders easily.</p>
 {% endblock %}
