--- a/templates/Product_add.html
+++ b/templates/Product_add.html
@@ -3,6 +3,13 @@
 {% block content %}
     <div class="container mt-4">
         <h1>Add Product</h1>
+        
+        {% if message %}
+        <div class="alert alert-danger" role="alert">
+            {{message}}
+        </div>
+        {% endif %}
+
         <form method="post" class="mt-3">
             <div class="mb-3">
                 <label for="ProductCode" class="form-label">Code:</label>
