--- a/app/templates/BillOfMaterials_add.html
+++ b/app/templates/BillOfMaterials_add.html
@@ -27,7 +27,7 @@
                 <input type="number" id="Quantity" name="Quantity" min="1" class="form-control" required>
             </div>
             <button type="submit" class="btn btn-primary">Add</button>
-            <a href="{{ url_for('view_BillOfMaterials') }}" class="btn btn-secondary">Go Back</a>
+            <a href="{{ url_for('bom.view_BillOfMaterials') }}" class="btn btn-secondary">Go Back</a>
         </form>
     </div>
 {% endblock %}
