--- a/app/templates/Inventory.html
+++ b/app/templates/Inventory.html
@@ -22,8 +22,8 @@
             <td>{{ row[2] }}</td>
             <td>{{ row[1]-row[2] }}</td>
             <td>
-                <a href="{{ url_for('increase_Inventory', ProductCode=row[0]) }}" class="btn btn-success btn-sm">+</a>
-                <a href="{{ url_for('decrease_Inventory', ProductCode=row[0]) }}" class="btn btn-danger btn-sm">-</a>
+                <a href="{{ url_for('inventory.increase_Inventory', ProductCode=row[0]) }}" class="btn btn-success btn-sm">+</a>
+                <a href="{{ url_for('inventory.decrease_Inventory', ProductCode=row[0]) }}" class="btn btn-danger btn-sm">-</a>
             </td>
         </tr>
         {% endfor %}
