--- a/app/templates/ProductionOrder.html
+++ b/app/templates/ProductionOrder.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <h2 class="text-center my-3">Active Production orders</h2>
-<a href="{{ url_for('add_ProductionOrder') }}" class="btn btn-primary mb-3">Add New</a>
+<a href="{{ url_for('production.add_ProductionOrder') }}" class="btn btn-primary mb-3">Add New</a>
 
 <table id="ProductionOrderTable" class="table table-striped">
     <thead>
@@ -24,8 +24,8 @@
                 <td>{{ row[3] }}</td>
                 <td>{{ row[4] }}</td>
                 <td>
-                    <a href="{{ url_for('view_ProductionOrderProgress', OrderID=row[0]) }}" class="btn btn-info btn-sm">View</a>
-                    <a href="{{ url_for('delete_ProductionOrder', OrderID=row[0]) }}" class="btn btn-danger btn-sm">Delete</a>
+                    <a href="{{ url_for('progress.view_ProductionOrderProgress', OrderID=row[0]) }}" class="btn btn-info btn-sm">View</a>
+                    <a href="{{ url_for('production.delete_ProductionOrder', OrderID=row[0]) }}" class="btn btn-danger btn-sm">Delete</a>
                 </td>
             </tr>
             {% endif %}
@@ -53,7 +53,7 @@
                 <td>{{ row[3] }}</td>
                 <td>{{ row[4] }}</td>
                 <td>
-                    <a href="{{ url_for('view_ProductionOrderProgress', OrderID=row[0]) }}" class="btn btn-info btn-sm">View</a>
+                    <a href="{{ url_for('progress.view_ProductionOrderProgress', OrderID=row[0]) }}" class="btn btn-info btn-sm">View</a>
                 </td>
             </tr>
             {% endif %}
