--- a/app/templates/ProductionOrderprogress.html
+++ b/app/templates/ProductionOrderprogress.html
@@ -6,7 +6,8 @@
     <p>Order date: {{ order[1] }}</p>
     <p>Quantity: {{ order[3] }}</p>
     <p>Status: {{ order[4] }}</p>
-    <a href="{{ url_for('production.complete_ProductionOrder', OrderID=order[0])}}" class="btn btn-primary mb-3"> Mark as complete</a>
+    <a href="{{ url_for('production.complete_ProductionOrder', OrderID=order[0])}}" class="btn btn-primary mb-3"> Mark as Complete</a>
+    <a href="{{ url_for('production.ongoing_ProductionOrder', OrderID=order[0])}}" class="btn btn-primary mb-3"> Mark as On going</a>
     <table id="ProductionOrderTable" class="table table-striped">
         <thead>
             <tr>
