--- a/app/templates/ProductionOrderprogress.html
+++ b/app/templates/ProductionOrderprogress.html
@@ -2,12 +2,14 @@
 {% block title %}Production Order Details{% endblock %}
 {% block content %}
     <h1>Production Order Details</h1>
-    <h2>{{ order[2] }}</h2>
-    <p>Order date: {{ order[1] }}</p>
-    <p>Quantity: {{ order[3] }}</p>
-    <p>Status: {{ order[4] }}</p>
-    <a href="{{ url_for('production.complete_ProductionOrder', OrderID=order[0])}}" class="btn btn-primary mb-3"> Mark as Complete</a>
-    <a href="{{ url_for('production.ongoing_ProductionOrder', OrderID=order[0])}}" class="btn btn-primary mb-3"> Mark as On going</a>
+    <h2>{{ order["ProductCode"] }}</h2>
+    <p>Order date: {{ order["OrderDate"] }}</p>
+    <p>Quantity: {{ order["QuantityCompleted"] }}/{{ order["Quantity"] }}</p>
+    <p>Status: {{ order["Status"] }}</p>
+    <a href="{{ url_for('production.increase_ProductionOrder', OrderID=order['OrderID']) }}" class="btn btn-success mb-3">+</a>
+    <a href="{{ url_for('production.decrease_ProductionOrder', OrderID=order['OrderID']) }}" class="btn btn-danger mb-3">-</a>                
+    <a href="{{ url_for('production.complete_ProductionOrder', OrderID=order['OrderID'])}}" class="btn btn-primary mb-3"> Mark as Complete</a>
+    <a href="{{ url_for('production.ongoing_ProductionOrder', OrderID=order['OrderID'])}}" class="btn btn-primary mb-3"> Mark as On going</a>
     <table id="ProductionOrderTable" class="table table-striped">
         <thead>
             <tr>
@@ -20,17 +22,17 @@
         <tbody>
             {% for row in data %}
             <tr>
-                <td>{{ row[2] }}</td>
-                <td>{{ row[6] }}</td>
-                <td>{{ row[4] }}/{{ row[3] }}</td>
+                <td>{{ row["ProductCode"] }}</td>
+                <td>{{ row["Category"] }}</td>
+                <td>{{ row["QuantityCompleted"] }}/{{ row["QuantityRequired"] }}</td>
                 <td>
-                    <a href="{{ url_for('progress.increase_ProductionOrderProgress', ProgressID=row[0], OrderID=order[0]) }}" class="btn btn-success btn-sm">+</a>
-                    <a href="{{ url_for('progress.decrease_ProductionOrderProgress', ProgressID=row[0], OrderID=order[0]) }}" class="btn btn-danger btn-sm">-</a>
+                    <a href="{{ url_for('progress.increase_ProductionOrderProgress', ProgressID=row[0], OrderID=order['OrderID']) }}" class="btn btn-success btn-sm">+</a>
+                    <a href="{{ url_for('progress.decrease_ProductionOrderProgress', ProgressID=row[0], OrderID=order['OrderID']) }}" class="btn btn-danger btn-sm">-</a>
                     {% if row[6] == "Subassembly" %}
                         {% if row[7] %}
                             <a href="{{ url_for('progress.view_ProductionOrderProgress', OrderID=row[7]) }}" class="btn btn-primary btn-sm">View Production order</a>
                         {% else %}
-                            <a href="{{ url_for('production.add_ProductionOrder', date=current_date, code=row[2], quantity=(row[3] - row[4]), parentOrderID=order[0]) }}" class="btn btn-primary btn-sm">Add Production order</a>
+                            <a href="{{ url_for('production.add_ProductionOrder', date=current_date, code=row[2], quantity=(row[3] - row[4]), parentOrderID=order['OrderID']) }}" class="btn btn-primary btn-sm">Add Production order</a>
                         {% endif %}    
                     {% endif %}
                 </td>
