--- a/app/templates/BillOfMaterials_add.html
+++ b/app/templates/BillOfMaterials_add.html
@@ -2,7 +2,7 @@
 {% block title %}Add material to bill{% endblock %}
 {% block content %}
     <div class="container mt-4">
-        <h1>Add Bill Of Materials</h1>
+        <h2 class="text-center my-3">Add Bill Of Materials</h2>
         <form method="post" class="mt-3">
             <div class="mb-3">
                 <label for="ProductCode" class="form-label">Product Code:</label>
