--- a/app/templates/ProductionOrder_add.html
+++ b/app/templates/ProductionOrder_add.html
@@ -2,7 +2,7 @@
 {% block title %}Add Production Order{% endblock %}
 {% block content %}
     <div class="container mt-4">
-        <h1>Add Production Order</h1>
+        <h2 class="text-center my-3">Add Production Order</h2>
         <form method="POST" class="mt-3">
             <div class="mb-3">
                 <label for="date" class="form-label">Order Date:</label>
