--- a/app/templates/Product_add.html
+++ b/app/templates/Product_add.html
@@ -2,7 +2,7 @@
 {% block title %}Add product{% endblock %}
 {% block content %}
     <div class="container mt-4">
-        <h1>Add Product</h1>
+        <h2 class="text-center my-3">Add Product</h2>
         
         {% if message %}
         <div class="alert alert-danger" role="alert">
@@ -30,7 +30,7 @@
                   </select>
             </div>
             <button type="submit" class="btn btn-primary">Add</button>
-            <a href="{{ url_for('view_Product') }}" class="btn btn-secondary">Go Back</a>
+            <a href="{{ url_for('product.view_Product') }}" class="btn btn-secondary">Go Back</a>
         </form>
     </div>
 {% endblock %}
