--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="it" data-bs-theme="dark">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,6 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
+
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -22,15 +24,19 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link" href="{{ url_for('production.view_ProductionOrder') }}">Production orders</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{{ url_for('inventory.view_Inventory') }}">Inventory</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{{ url_for('product.view_Product') }}">Products</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{{ url_for('bom.view_BillOfMaterials') }}">Bill of materials</a></li>
+                        <li class="nav-item"><a class="nav-link"
+                                href="{{ url_for('production.view_ProductionOrder') }}">Production orders</a></li>
+                        <li class="nav-item"><a class="nav-link"
+                                href="{{ url_for('inventory.view_Inventory') }}">Inventory</a></li>
+                        <li class="nav-item"><a class="nav-link"
+                                href="{{ url_for('product.view_Product') }}">Products</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{{ url_for('bom.view_BillOfMaterials') }}">Bill
+                                of materials</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
-        
+
     </nav>
 
     <div class="container mt-4">
@@ -39,9 +45,50 @@
 
     <footer class="bg-dark text-light text-center py-3 mt-5">
         <div class="container">
-            <p class="mb-1">&copy; 2025 - Giacomo Guaresi | <a href="https://github.com/giacomoguaresi" class="text-light text-decoration-none" target="_blank">GitHub</a></p>
+            <div class="collapse mb-3" id="collapseExample">
+                <div class="card card-body text-start" id="LogsContainer">
+                </div>
+            </div>
+            <p class="text-end">
+                <a class="btn btn-outline-secondary" data-bs-toggle="collapse" href="#collapseExample" role="button"
+                    aria-expanded="false" aria-controls="collapseExample">
+                    Logs
+                </a>
+            </p>
+        </div>
+        <div class="container">
+            <p class="mb-1">&copy; 2025 - Giacomo Guaresi | <a href="https://github.com/giacomoguaresi"
+                    class="text-light text-decoration-none" target="_blank">GitHub</a></p>
             <p class="small mb-0">Built with Flask & Bootstrap 5</p>
         </div>
     </footer>
+    <script>
+        function fetchLogs() {
+            fetch('/logs')
+                .then(response => response.json()) // Converti la risposta in JSON
+                .then(data => {
+                    const logsContainer = document.getElementById('LogsContainer');
+                    logsContainer.innerHTML = ''; // Svuota il contenitore
+    
+                    // Popola il contenitore con i log ricevuti
+                    data.forEach(log => {
+                        const logEntry = document.createElement('div');
+                        logEntry.classList.add('log-entry');
+                        string = "<span class='fw-bold'>" + log["timestamp"] + "</span> <span class='text-danger'>" + log["user"] + "</span> " + log["message"]
+                        logEntry.innerHTML = string // Converte il log in stringa
+                        logsContainer.appendChild(logEntry);
+                    });
+                })
+                .catch(error => console.error('Errore nel recupero dei log:', error));
+        }
+    
+        // Carica i log all'avvio della pagina
+        document.addEventListener("DOMContentLoaded", () => {
+            fetchLogs(); // Esegui subito al caricamento
+            setInterval(fetchLogs, 10000); // Esegui ogni 10 secondi
+        });
+    </script>
+    
 </body>
+
 </html>
